Make use of Path.of()