@@ -20,7 +20,6 @@ import java.nio.file.FileVisitResult;
 import java.nio.file.FileVisitor;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.Arrays;
 import java.util.Collection;
@@ -187,7 +186,7 @@ public class ArtifactVisitor implements FileVisitor<Path> {
             return;
         }
 
-        Path artifactPath = Paths.get(metadata.getPath());
+        Path artifactPath = Path.of(metadata.getPath());
 
         if (!dryRun) {
             Files.delete(path);
